# tz_dimtech

./: .dev.env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
src/: config.py  main.py
src/api/: api_router_v1.py  dependencies.py
src/api/accounts/: accounts_response.py
src/api/accounts/routes/: accounts_route.py
src/api/accounts/service/: accounts_api_service.py
src/api/auth/: reponse.py  request.py
src/api/auth/routes/: auth_route.py
src/api/auth/services/: auth_api_service.py  jwt_service.py
src/api/exceptions/: payments_exceptions.py  user_exceptions.py
src/api/payments/: payment_requests.py
src/api/payments/routes/: payments_route.py
src/api/payments/service/: payments_api_service.py  signature_service.py
src/api/users/: user_api_service.py  user_request.py  users_response.py
src/api/users/routes/: users_route.py
src/enums/: user_role.py
src/helpers/: db.py  helper.py
src/helpers/exceptions/: http_exceptions.py
src/models/: __init__.py  account_model.py  base_model.py  payment_model.py  user_model.py
src/repositories/: account_repositories.py  payment_repositories.py  user_repositories.py
src/schemas/: account_schemas.py  auth_schemas.py  payment_schemas.py  signature_shemas.py  user_shemas.py
src/services/: account_service.py  payment_service.py  user_service.py
src/utils/: security.py  utils.py
